{
  "version": 4,
  "terraform_version": "1.11.4",
  "serial": 1586,
  "lineage": "aa86e838-343b-cf5b-4882-f1bf9fa244ef",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "asterisk_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-053da54c536d8066e",
            "arn": "arn:aws:ec2:us-east-2:730335291008:elastic-ip/eipalloc-053da54c536d8066e",
            "association_id": "eipassoc-01905395158bbf30a",
            "domain": "vpc",
            "id": "eipalloc-053da54c536d8066e",
            "instance": "i-03d6c966c9078d8cb",
            "network_border_group": "us-east-2",
            "network_interface": "eni-04bfb99c9bba0735e",
            "private_dns": "ip-172-31-100-78.us-east-2.compute.internal",
            "private_ip": "172.31.100.78",
            "public_dns": "ec2-3-140-153-103.us-east-2.compute.amazonaws.com",
            "public_ip": "3.140.153.103",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "asterisk-permanent-eip"
            },
            "tags_all": {
              "Name": "asterisk-permanent-eip"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0ce9b38740bc14595",
            "arn": "arn:aws:ec2:us-east-2:730335291008:elastic-ip/eipalloc-0ce9b38740bc14595",
            "association_id": "eipassoc-0eda73e7fa2ca15c2",
            "domain": "vpc",
            "id": "eipalloc-0ce9b38740bc14595",
            "network_border_group": "us-east-2",
            "network_interface": "eni-00e4ea9eb406a6b08",
            "private_dns": "ip-172-31-100-210.us-east-2.compute.internal",
            "private_ip": "172.31.100.210",
            "public_dns": "ec2-18-216-248-123.us-east-2.compute.amazonaws.com",
            "public_ip": "18.216.248.123",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "bianca-nat-gateway-eip"
            },
            "tags_all": {
              "Name": "bianca-nat-gateway-eip"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "asterisk",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-054d057aaa6f1aa39",
            "arn": "arn:aws:ec2:us-east-2:730335291008:instance/i-03d6c966c9078d8cb",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "asterisk-ec2-profile",
            "id": "i-03d6c966c9078d8cb",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.medium",
            "ipv6_address_count": 0,
            "key_name": "bianca-key-pair",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": true,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-04bfb99c9bba0735e",
            "private_dns": "ip-172-31-100-78.us-east-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.100.78",
            "public_dns": "ec2-3-140-153-103.us-east-2.compute.amazonaws.com",
            "public_ip": "3.140.153.103",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": true,
                "iops": 3000,
                "kms_key_id": "arn:aws:kms:us-east-2:730335291008:key/96ee47b6-6696-445b-b723-ed9148985a17",
                "throughput": 125,
                "volume_id": "vol-0dcc43e96502a9a2f",
                "volume_size": 30,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "asterisk-ec2-sg"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-00ec81340523b7240",
            "tags": {
              "Environment": "production",
              "Name": "asterisk-server"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "asterisk-server"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-02aa60b0ef90ff8ec"
            ]
          },
          "dependencies": [
            "aws_eip.asterisk_eip",
            "aws_iam_instance_profile.asterisk_profile",
            "aws_iam_role.asterisk_ec2_role",
            "aws_security_group.asterisk_ec2_sg",
            "aws_subnet.public_a",
            "data.aws_ami.amazon_linux_2",
            "data.aws_availability_zones.available",
            "data.aws_secretsmanager_secret.app_secret"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:730335291008:internet-gateway/igw-06b48f8b038a178e5",
            "id": "igw-06b48f8b038a178e5",
            "owner_id": "730335291008",
            "tags": {
              "Name": "bianca-app-igw"
            },
            "tags_all": {
              "Name": "bianca-app-igw"
            },
            "vpc_id": "vpc-05c16725411127dc3"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "app_lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-2:730335291008:loadbalancer/app/bianca-load-balancer/0ab52abf4eda1cb5",
            "arn_suffix": "app/bianca-load-balancer/0ab52abf4eda1cb5",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "bianca-load-balancer-1774778217.us-east-2.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:us-east-2:730335291008:loadbalancer/app/bianca-load-balancer/0ab52abf4eda1cb5",
            "idle_timeout": 120,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "bianca-load-balancer",
            "preserve_host_header": false,
            "security_groups": [
              "sg-03b3ab2a793289acc"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-00ec81340523b7240"
              },
              {
                "subnet_id": "subnet-06d5200485f11541b"
              }
            ],
            "subnets": [
              "subnet-00ec81340523b7240",
              "subnet-06d5200485f11541b"
            ],
            "tags": {
              "Name": "bianca-load-balancer"
            },
            "tags_all": {
              "Name": "bianca-load-balancer"
            },
            "vpc_id": "vpc-05c16725411127dc3",
            "xff_header_processing_mode": "append",
            "zone_id": "Z3AADJGX6KTTL2"
          },
          "dependencies": [
            "aws_security_group.alb_sg",
            "aws_subnet.public_a",
            "aws_subnet.public_b",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "http_listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-2:730335291008:listener/app/bianca-load-balancer/0ab52abf4eda1cb5/ece09f7ca76e7ddc",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-2:730335291008:targetgroup/bianca-target-group/06afc8767fc5e872",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-2:730335291008:listener/app/bianca-load-balancer/0ab52abf4eda1cb5/ece09f7ca76e7ddc",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-2:730335291008:loadbalancer/app/bianca-load-balancer/0ab52abf4eda1cb5",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": false,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.app_lb",
            "aws_lb_target_group.app_tg",
            "aws_security_group.alb_sg",
            "aws_subnet.public_a",
            "aws_subnet.public_b",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "https_listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-2:730335291008:listener/app/bianca-load-balancer/0ab52abf4eda1cb5/cfabf1fa84bbac7b",
            "certificate_arn": "arn:aws:acm:us-east-2:730335291008:certificate/7c210226-1854-4fba-b48f-ae233fd9619f",
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-2:730335291008:targetgroup/bianca-target-group/06afc8767fc5e872",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-2:730335291008:listener/app/bianca-load-balancer/0ab52abf4eda1cb5/cfabf1fa84bbac7b",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-2:730335291008:loadbalancer/app/bianca-load-balancer/0ab52abf4eda1cb5",
            "mutual_authentication": [
              {
                "advertise_trust_store_ca_names": "",
                "ignore_client_certificate_expiry": false,
                "mode": "off",
                "trust_store_arn": ""
              }
            ],
            "port": 443,
            "protocol": "HTTPS",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": "",
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": "",
            "routing_http_request_x_amzn_tls_version_header_name": "",
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": false,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "ELBSecurityPolicy-TLS-1-2-Ext-2018-06",
            "tags": {},
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.app_lb",
            "aws_lb_target_group.app_tg",
            "aws_security_group.alb_sg",
            "aws_subnet.public_a",
            "aws_subnet.public_b",
            "data.aws_acm_certificate.app_cert",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "app_tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-2:730335291008:targetgroup/bianca-target-group/06afc8767fc5e872",
            "arn_suffix": "targetgroup/bianca-target-group/06afc8767fc5e872",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 60,
                "matcher": "200",
                "path": "/health",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 15,
                "unhealthy_threshold": 10
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-2:730335291008:targetgroup/bianca-target-group/06afc8767fc5e872",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:us-east-2:730335291008:loadbalancer/app/bianca-load-balancer/0ab52abf4eda1cb5"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "bianca-target-group",
            "port": 3000,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "bianca-target-group"
            },
            "tags_all": {
              "Name": "bianca-target-group"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-05c16725411127dc3"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0ce9b38740bc14595",
            "association_id": "eipassoc-0eda73e7fa2ca15c2",
            "connectivity_type": "public",
            "id": "nat-052e1a4ab22ecbb0b",
            "network_interface_id": "eni-00e4ea9eb406a6b08",
            "private_ip": "172.31.100.210",
            "public_ip": "18.216.248.123",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-00ec81340523b7240",
            "tags": {
              "Name": "bianca-nat-gateway"
            },
            "tags_all": {
              "Name": "bianca-nat-gateway"
            }
          },
          "dependencies": [
            "aws_eip.nat_gateway",
            "aws_internet_gateway.gw",
            "aws_subnet.public_a",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:730335291008:route-table/rtb-0c254ef3103d3b738",
            "id": "rtb-0c254ef3103d3b738",
            "owner_id": "730335291008",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-052e1a4ab22ecbb0b",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "bianca-private-rt"
            },
            "tags_all": {
              "Name": "bianca-private-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-05c16725411127dc3"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat_gateway",
            "aws_internet_gateway.gw",
            "aws_nat_gateway.main",
            "aws_subnet.public_a",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:730335291008:route-table/rtb-09d69a440b4056cf9",
            "id": "rtb-09d69a440b4056cf9",
            "owner_id": "730335291008",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-06b48f8b038a178e5",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "bianca-public-rt"
            },
            "tags_all": {
              "Name": "bianca-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-05c16725411127dc3"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.gw"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03b4eabba8143cf71",
            "route_table_id": "rtb-0c254ef3103d3b738",
            "subnet_id": "subnet-0201d14b63e52699d"
          },
          "dependencies": [
            "aws_eip.nat_gateway",
            "aws_internet_gateway.gw",
            "aws_nat_gateway.main",
            "aws_route_table.private",
            "aws_subnet.private_a",
            "aws_subnet.public_a",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e26fc6c772eb7699",
            "route_table_id": "rtb-0c254ef3103d3b738",
            "subnet_id": "subnet-0ff05ef8a1122d36b"
          },
          "dependencies": [
            "aws_eip.nat_gateway",
            "aws_internet_gateway.gw",
            "aws_nat_gateway.main",
            "aws_route_table.private",
            "aws_subnet.private_b",
            "aws_subnet.public_a",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-099d6e37cb66e3eaa",
            "route_table_id": "rtb-09d69a440b4056cf9",
            "subnet_id": "subnet-00ec81340523b7240"
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_route_table.public",
            "aws_subnet.public_a",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0284e0961987c8c57",
            "route_table_id": "rtb-09d69a440b4056cf9",
            "subnet_id": "subnet-06d5200485f11541b"
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_route_table.public",
            "aws_subnet.public_b",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:730335291008:security-group/sg-03b3ab2a793289acc",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-03b3ab2a793289acc",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow HTTP from anywhere",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow HTTPS from anywhere",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "alb-sg",
            "name_prefix": "",
            "owner_id": "730335291008",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-05c16725411127dc3"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "asterisk_ec2_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:730335291008:security-group/sg-02aa60b0ef90ff8ec",
            "description": "Security group for Asterisk EC2 instance",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-02aa60b0ef90ff8ec",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH access",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "54.172.60.0/23",
                  "34.203.250.0/23",
                  "34.216.110.128/25",
                  "54.244.51.0/24",
                  "54.171.127.192/26",
                  "35.156.191.128/26",
                  "54.65.63.192/26",
                  "54.169.127.128/26",
                  "54.252.254.64/26",
                  "177.71.206.192/26",
                  "3.141.235.83/32"
                ],
                "description": "SIP TCP from Twilio \u0026 Bianca Client",
                "from_port": 5061,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 5061
              },
              {
                "cidr_blocks": [
                  "54.172.60.0/23",
                  "34.203.250.0/23",
                  "34.216.110.128/25",
                  "54.244.51.0/24",
                  "54.171.127.192/26",
                  "35.156.191.128/26",
                  "54.65.63.192/26",
                  "54.169.127.128/26",
                  "54.252.254.64/26",
                  "177.71.206.192/26",
                  "3.141.235.83/32"
                ],
                "description": "SIP UDP from Twilio \u0026 Bianca Client",
                "from_port": 5060,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "udp",
                "security_groups": [],
                "self": false,
                "to_port": 5060
              },
              {
                "cidr_blocks": [
                  "54.172.60.0/23",
                  "34.203.250.0/23",
                  "34.216.110.128/25",
                  "54.244.51.0/24",
                  "54.171.127.192/26",
                  "35.156.191.128/26",
                  "54.65.63.192/26",
                  "54.169.127.128/26",
                  "54.252.254.64/26",
                  "177.71.206.192/26"
                ],
                "description": "RTP UDP from Twilio",
                "from_port": 10000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "udp",
                "security_groups": [],
                "self": false,
                "to_port": 20000
              }
            ],
            "name": "asterisk-ec2-sg",
            "name_prefix": "",
            "owner_id": "730335291008",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "asterisk-ec2-sg"
            },
            "tags_all": {
              "Name": "asterisk-ec2-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-05c16725411127dc3"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "bianca_app_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:730335291008:security-group/sg-07c134670ee6c4d54",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              },
              {
                "cidr_blocks": [
                  "172.31.100.0/24",
                  "172.31.101.0/24"
                ],
                "description": "Explicit egress to Asterisk ARI",
                "from_port": 8088,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8088
              }
            ],
            "id": "sg-07c134670ee6c4d54",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Allow ALB traffic on App HTTP Port",
                "from_port": 3000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-03b3ab2a793289acc"
                ],
                "self": false,
                "to_port": 3000
              }
            ],
            "name": "bianca-app-sg",
            "name_prefix": "",
            "owner_id": "730335291008",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-05c16725411127dc3"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.alb_sg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "efs_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:730335291008:security-group/sg-0e8f769c53c04cf19",
            "description": "Allow NFS traffic from ECS tasks to EFS",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0e8f769c53c04cf19",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "NFS from Bianca App ECS tasks",
                "from_port": 2049,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-07c134670ee6c4d54"
                ],
                "self": false,
                "to_port": 2049
              }
            ],
            "name": "mongodb-efs-sg",
            "name_prefix": "",
            "owner_id": "730335291008",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "mongodb-efs-sg"
            },
            "tags_all": {
              "Name": "mongodb-efs-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-05c16725411127dc3"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.alb_sg",
            "aws_security_group.bianca_app_sg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "mongodb_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:730335291008:security-group/sg-040e32afea81a3b8d",
            "description": "Security group for MongoDB service",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-040e32afea81a3b8d",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "MongoDB from app",
                "from_port": 27017,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-07c134670ee6c4d54"
                ],
                "self": false,
                "to_port": 27017
              }
            ],
            "name": "mongodb-sg",
            "name_prefix": "",
            "owner_id": "730335291008",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "mongodb-sg"
            },
            "tags_all": {
              "Name": "mongodb-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-05c16725411127dc3"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.alb_sg",
            "aws_security_group.bianca_app_sg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "vpc_endpoints_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:730335291008:security-group/sg-0a0e3e92768a8a82d",
            "description": "Security group for VPC endpoints",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0a0e3e92768a8a82d",
            "ingress": [
              {
                "cidr_blocks": [
                  "172.31.0.0/16"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "vpc-endpoints-sg",
            "name_prefix": "",
            "owner_id": "730335291008",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "vpc-endpoints-sg"
            },
            "tags_all": {
              "Name": "vpc-endpoints-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-05c16725411127dc3"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "alb_to_fargate_egress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow ALB to reach Fargate tasks",
            "from_port": 3000,
            "id": "sgrule-1007077161",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-03b3ab2a793289acc",
            "security_group_rule_id": "sgr-0a2dbb0767ed00145",
            "self": false,
            "source_security_group_id": "sg-07c134670ee6c4d54",
            "timeouts": null,
            "to_port": 3000,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.alb_sg",
            "aws_security_group.bianca_app_sg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "app_rtp_from_asterisk",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "172.31.100.0/24",
              "172.31.101.0/24"
            ],
            "description": "RTP from Asterisk (public subnet)",
            "from_port": 16384,
            "id": "sgrule-1012395033",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "udp",
            "security_group_id": "sg-07c134670ee6c4d54",
            "security_group_rule_id": "",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 16484,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.alb_sg",
            "aws_security_group.bianca_app_sg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "app_to_asterisk_ari_explicit",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "172.31.100.0/24",
              "172.31.101.0/24"
            ],
            "description": "Explicit egress to Asterisk ARI",
            "from_port": 8088,
            "id": "sgrule-2187305571",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-07c134670ee6c4d54",
            "security_group_rule_id": "",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 8088,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.alb_sg",
            "aws_security_group.bianca_app_sg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "app_to_mongo_egress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow app to connect to MongoDB service",
            "from_port": 27017,
            "id": "sgrule-2463854988",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-07c134670ee6c4d54",
            "security_group_rule_id": "sgr-04dd4768ef3d469d8",
            "self": false,
            "source_security_group_id": "sg-040e32afea81a3b8d",
            "timeouts": null,
            "to_port": 27017,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.alb_sg",
            "aws_security_group.bianca_app_sg",
            "aws_security_group.mongodb_sg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "asterisk_ari_from_bianca_app_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "ARI access from Bianca App security group",
            "from_port": 8088,
            "id": "sgrule-3689717274",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-02aa60b0ef90ff8ec",
            "security_group_rule_id": "sgr-016a4e2d2507f5c4a",
            "self": false,
            "source_security_group_id": "sg-07c134670ee6c4d54",
            "timeouts": null,
            "to_port": 8088,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.alb_sg",
            "aws_security_group.asterisk_ec2_sg",
            "aws_security_group.bianca_app_sg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "asterisk_ari_from_private_subnets_debug",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "172.31.110.0/24",
              "172.31.111.0/24"
            ],
            "description": "ARI access from Fargate private subnets (CIDR-based)",
            "from_port": 8088,
            "id": "sgrule-1693574026",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-02aa60b0ef90ff8ec",
            "security_group_rule_id": "",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 8088,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.asterisk_ec2_sg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "asterisk_ari_from_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "172.31.0.0/16"
            ],
            "description": "ARI access from entire VPC",
            "from_port": 8088,
            "id": "sgrule-3963420158",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-02aa60b0ef90ff8ec",
            "security_group_rule_id": "sgr-0315448bcf4f22a36",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 8088,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.asterisk_ec2_sg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "asterisk_rtp_from_private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "172.31.110.0/24",
              "172.31.111.0/24"
            ],
            "description": "RTP from private subnets (app)",
            "from_port": 10000,
            "id": "sgrule-2513742757",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "udp",
            "security_group_id": "sg-02aa60b0ef90ff8ec",
            "security_group_rule_id": "",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 20000,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.asterisk_ec2_sg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "debug_all_from_private_to_public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "172.31.110.0/24",
              "172.31.111.0/24"
            ],
            "description": "DEBUG: Allow all TCP from private subnets",
            "from_port": 0,
            "id": "sgrule-1231635460",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-02aa60b0ef90ff8ec",
            "security_group_rule_id": "",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 65535,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.asterisk_ec2_sg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "efs_from_mongodb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "NFS from MongoDB service",
            "from_port": 2049,
            "id": "sgrule-3518851175",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0e8f769c53c04cf19",
            "security_group_rule_id": "sgr-0b03431e2ec8f1914",
            "self": false,
            "source_security_group_id": "sg-040e32afea81a3b8d",
            "timeouts": null,
            "to_port": 2049,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.alb_sg",
            "aws_security_group.bianca_app_sg",
            "aws_security_group.efs_sg",
            "aws_security_group.mongodb_sg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "mongodb_to_efs_egress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow MongoDB to reach EFS",
            "from_port": 2049,
            "id": "sgrule-2817281649",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-040e32afea81a3b8d",
            "security_group_rule_id": "sgr-0a315ef1f3b660384",
            "self": false,
            "source_security_group_id": "sg-0e8f769c53c04cf19",
            "timeouts": null,
            "to_port": 2049,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.alb_sg",
            "aws_security_group.bianca_app_sg",
            "aws_security_group.efs_sg",
            "aws_security_group.mongodb_sg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:730335291008:subnet/subnet-0201d14b63e52699d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "172.31.110.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0201d14b63e52699d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "730335291008",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "bianca-private-a"
            },
            "tags_all": {
              "Name": "bianca-private-a"
            },
            "vpc_id": "vpc-05c16725411127dc3"
          },
          "dependencies": [
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:730335291008:subnet/subnet-0ff05ef8a1122d36b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "172.31.111.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ff05ef8a1122d36b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "730335291008",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "bianca-private-b"
            },
            "tags_all": {
              "Name": "bianca-private-b"
            },
            "vpc_id": "vpc-05c16725411127dc3"
          },
          "dependencies": [
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:730335291008:subnet/subnet-00ec81340523b7240",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "172.31.100.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00ec81340523b7240",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "730335291008",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "bianca-public-a"
            },
            "tags_all": {
              "Name": "bianca-public-a"
            },
            "vpc_id": "vpc-05c16725411127dc3"
          },
          "dependencies": [
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:730335291008:subnet/subnet-06d5200485f11541b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "172.31.101.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06d5200485f11541b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "730335291008",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "bianca-public-b"
            },
            "tags_all": {
              "Name": "bianca-public-b"
            },
            "vpc_id": "vpc-05c16725411127dc3"
          },
          "dependencies": [
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "ecr_api",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:730335291008:vpc-endpoint/vpce-0df912301f69e066c",
            "dns_entry": [
              {
                "dns_name": "vpce-0df912301f69e066c-yfzsetiq.api.ecr.us-east-2.vpce.amazonaws.com",
                "hosted_zone_id": "ZC8PG0KIFKBRI"
              },
              {
                "dns_name": "vpce-0df912301f69e066c-yfzsetiq-us-east-2a.api.ecr.us-east-2.vpce.amazonaws.com",
                "hosted_zone_id": "ZC8PG0KIFKBRI"
              },
              {
                "dns_name": "vpce-0df912301f69e066c-yfzsetiq-us-east-2b.api.ecr.us-east-2.vpce.amazonaws.com",
                "hosted_zone_id": "ZC8PG0KIFKBRI"
              },
              {
                "dns_name": "api.ecr.us-east-2.amazonaws.com",
                "hosted_zone_id": "Z04613812DJHZ517FW6NJ"
              },
              {
                "dns_name": "ecr.us-east-2.api.aws",
                "hosted_zone_id": "Z02871563KVU2MHLR1SBO"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-0df912301f69e066c",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-01d6da315356a02bd",
              "eni-07414a3802a52601b"
            ],
            "owner_id": "730335291008",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-0a0e3e92768a8a82d"
            ],
            "service_name": "com.amazonaws.us-east-2.ecr.api",
            "service_region": "us-east-2",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "172.31.110.238",
                "subnet_id": "subnet-0201d14b63e52699d"
              },
              {
                "ipv4": "172.31.111.194",
                "subnet_id": "subnet-0ff05ef8a1122d36b"
              }
            ],
            "subnet_ids": [
              "subnet-0201d14b63e52699d",
              "subnet-0ff05ef8a1122d36b"
            ],
            "tags": {
              "Name": "ecr-api-endpoint"
            },
            "tags_all": {
              "Name": "ecr-api-endpoint"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-05c16725411127dc3"
          },
          "dependencies": [
            "aws_security_group.vpc_endpoints_sg",
            "aws_subnet.private_a",
            "aws_subnet.private_b",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "ecr_dkr",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:730335291008:vpc-endpoint/vpce-05c01602ab0af7368",
            "dns_entry": [
              {
                "dns_name": "vpce-05c01602ab0af7368-gy1zy9y8.dkr.ecr.us-east-2.vpce.amazonaws.com",
                "hosted_zone_id": "ZC8PG0KIFKBRI"
              },
              {
                "dns_name": "vpce-05c01602ab0af7368-gy1zy9y8-us-east-2b.dkr.ecr.us-east-2.vpce.amazonaws.com",
                "hosted_zone_id": "ZC8PG0KIFKBRI"
              },
              {
                "dns_name": "vpce-05c01602ab0af7368-gy1zy9y8-us-east-2a.dkr.ecr.us-east-2.vpce.amazonaws.com",
                "hosted_zone_id": "ZC8PG0KIFKBRI"
              },
              {
                "dns_name": "dkr.ecr.us-east-2.amazonaws.com",
                "hosted_zone_id": "Z046138827YIWOWM7ND0G"
              },
              {
                "dns_name": "*.dkr.ecr.us-east-2.amazonaws.com",
                "hosted_zone_id": "Z046138827YIWOWM7ND0G"
              },
              {
                "dns_name": "dkr-ecr.us-east-2.on.aws",
                "hosted_zone_id": "Z051992322TCXXYESNV86"
              },
              {
                "dns_name": "*.dkr-ecr.us-east-2.on.aws",
                "hosted_zone_id": "Z051992322TCXXYESNV86"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-05c01602ab0af7368",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-030228ee5ec77957a",
              "eni-081f31d7bf759e851"
            ],
            "owner_id": "730335291008",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-0a0e3e92768a8a82d"
            ],
            "service_name": "com.amazonaws.us-east-2.ecr.dkr",
            "service_region": "us-east-2",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "172.31.110.120",
                "subnet_id": "subnet-0201d14b63e52699d"
              },
              {
                "ipv4": "172.31.111.197",
                "subnet_id": "subnet-0ff05ef8a1122d36b"
              }
            ],
            "subnet_ids": [
              "subnet-0201d14b63e52699d",
              "subnet-0ff05ef8a1122d36b"
            ],
            "tags": {
              "Name": "ecr-dkr-endpoint"
            },
            "tags_all": {
              "Name": "ecr-dkr-endpoint"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-05c16725411127dc3"
          },
          "dependencies": [
            "aws_security_group.vpc_endpoints_sg",
            "aws_subnet.private_a",
            "aws_subnet.private_b",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "s3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:730335291008:vpc-endpoint/vpce-0b37afe4382b05277",
            "cidr_blocks": [
              "18.34.252.0/22",
              "52.219.141.0/24",
              "18.34.72.0/21",
              "52.219.96.0/20",
              "52.219.224.0/21",
              "16.12.60.0/22",
              "52.219.232.0/22",
              "52.219.80.0/20",
              "3.5.128.0/22",
              "52.219.142.0/23",
              "3.5.132.0/23",
              "16.12.64.0/22",
              "52.219.212.0/22",
              "52.219.176.0/22"
            ],
            "id": "vpce-0b37afe4382b05277",
            "owner_id": "730335291008",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}],\"Version\":\"2008-10-17\"}",
            "prefix_list_id": "pl-7ba54012",
            "private_dns_enabled": false,
            "requester_managed": false,
            "route_table_ids": [
              "rtb-0c254ef3103d3b738"
            ],
            "service_name": "com.amazonaws.us-east-2.s3",
            "service_region": "us-east-2",
            "state": "available",
            "tags": {
              "Name": "s3-endpoint"
            },
            "tags_all": {
              "Name": "s3-endpoint"
            },
            "vpc_endpoint_type": "Gateway",
            "vpc_id": "vpc-05c16725411127dc3"
          },
          "dependencies": [
            "aws_eip.nat_gateway",
            "aws_internet_gateway.gw",
            "aws_nat_gateway.main",
            "aws_route_table.private",
            "aws_subnet.public_a",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    }
  ]
}